<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_edit_text"
            style="@style/EditTextStyle"
            android:layout_marginTop="16dp"
            android:hint="@string/name_hint" />

        <EditText
            android:id="@+id/quantity_edit_text"
            style="@style/EditTextStyle"
            android:hint="@string/quantity_hint"
            android:inputType="numberSigned" />

        <EditText
            android:id="@+id/price_edit_text"
            style="@style/EditTextStyle"
            android:hint="@string/price_hint"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/supplier_edit_text"
            style="@style/EditTextStyle"
            android:hint="@string/email_hint" />

        <EditText
            android:id="@+id/image_edit_text"
            style="@style/EditTextStyle"
            android:hint="@string/image_hint" />

        <Button
            android:id="@+id/add_product_button"
            style="@style/ButtonStyle"
            android:layout_gravity="end"
            android:text="@string/add_product_button" />

    </LinearLayout>

</ScrollView>

